Added Rsync file to main code

--- a/robot13.sh.DIST
+++ b/robot13.sh.DIST
@@ -51,6 +51,7 @@ mkdir -p $LOGDIR
 
     # scripts
     /usr/bin/bash robot13-compress.sh $DESTINATION $FORMAT
+    /usr/bin/bash robot13-rsync.sh $DESTINATION $FORMAT
 
     # resume
     SIZE=$(du -sh $DESTINATION)
