--- a/robot13-compress.sh.DIST
+++ b/robot13-compress.sh.DIST
@@ -20,8 +20,7 @@ COMPRESS=('/etc/apache2' '/etc/ssmtp' '/home/user/Documents' '/opt/zimbra/conf')
 # main code
 # # # # # # # # # # # # # # # # # # # # # # #
 
-# recebe BACKUP via parametro?
-# robot13-compress.sh $BACKUP
+# $DESTINATION and $FORMAT from command line
 if [ ! -z "$1" ]
     then
           DESTINATION="$1"
@@ -74,6 +73,4 @@ for OBJ in ${COMPRESS[*]}
 echo
 
 # resume
-SIZE=$(du -sh $OUTPUT)
-FINISH=$(date)
 source resume.sh
