--- a/robot13-rsync.sh.DIST
+++ b/robot13-rsync.sh.DIST
@@ -4,6 +4,9 @@
 # conta e uma chave autorizada SSH.
 # https://www.ssh.com/academy/ssh/authorized-keys-openssh
 
+# : : : : : : : : : : : : : : : : : : : : : :
+# variaveis de ambiente
+
 # section
 SECTION="Rsync"  # this section
 
@@ -20,6 +23,10 @@ RSYNC="/usr/bin/rsync"
 # options : https://linux.die.net/man/1/rsync
 PARAM="-arv --inplace --progress --partial"
 PORT="-e 'ssh -p 22'"
+
+
+# : : : : : : : : : : : : : : : : : : : : : :
+# main code
 
 # recebe DESTINATION e FORMAT via parametro
 if [ ! -z "$1" ]
@@ -44,7 +51,9 @@ BACKUP="$1/$2"
 # rewrite to remote server
 DESTINATION="$USER@$SERVER:$SERVER_DEST/."
 
+# header
 source header.sh
+
 CMD="$RSYNC $PARAM $PORT $BACKUP $USER@$SERVER:$SERVER_DEST/."
 echo
 echo "  User       : $USER"
@@ -52,7 +61,7 @@ echo "  Server     : $SERVER"
 echo "  Source     : $BACKUP"
 echo "  CMD        : $CMD"
 
-# executa linha de comando
+# run line command
 eval $CMD
 
 # resume
