--- a/robot13-report-log.sh.DIST
+++ b/robot13-report-log.sh.DIST
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
 # O objetivo desse script é verificar se existe erro no arquivo log e reportar
 # a pessoa responsável.
@@ -6,8 +6,8 @@
 # O comando mail é do pacote mailutils. Voce pode usar o serviço ssmtp para configurar
 # um smtp, https://wiki.debian.org/sSMTP
 
-# : : : : : : : : : : : : : : : : : : : : : :
-# variaveis de ambiente
+# # # variaveis de ambiente
+START=$(date)
 
 # section
 SECTION="report-log"
@@ -19,14 +19,16 @@ MTA="sendmail"  # sendmail OR mail
 MAIL="/usr/sbin/mail"
 SENDMAIL="/usr/sbin/sendmail"
 
-MAILFROM="report@domain.com"
-MAILTO="mail0@domain.com, mail1@domain.com, mailN@domain.com"
+MAILFROM="mailfrom@domain.com.br"
+MAILTO="mailto@domain.com.br"
 MAILSUBJ="Robot13 Report Backup Log"
 
-# : : : : : : : : : : : : : : : : : : : : : :
+ORIGIN=$MAILFROM
+DESTINATION=$MAILTO
+
 # main code
 
-# recebe DESTINATION e FORMAT via parametro
+# recebe LOG e ERROR via linha de comando
 if [ ! -z "$1" ]
     then
           LOGSUC="$1"
@@ -43,44 +45,44 @@ if [ ! -z "$2" ]
           exit 0
     fi
 
-# header
-source header.sh
-
-echo
-echo "  User       : $USER"
-echo "  Server     : $SERVER"
-echo "  Source     : $BACKUP"
-echo "  CMD        : $CMD"
-
-# success
-echo
-echo "  = Send report..."
-echo "  Success    : $LOGSUC"
-echo "  Error      : $LOGERR"
-
-
 if [ "$MTA" == 'sendmail' ]
  then
+    CMD="$SENDMAIL -t -f $MAILFROM"
+
+    # header
+    source header.sh
+
     S="$MAILSUBJ - Sucess"
     echo "  SendMail success!"
-    echo -e "subject:$S\nto:$MAILTO\n(`more $LOGSUC`)" | $SENDMAIL -t -f $MAILFROM
+    echo -e "subject:$S\nto:$MAILTO\n(`more $LOGSUC`)" | $CMD
 
     S="$MAILSUBJ - Error"
     echo "  SendMail error!"
-    echo -e "subject:$S\nto:$MAILTO\n(`more $LOGERR`)" | $SENDMAIL -t -f $MAILFROM
+    echo -e "subject:$S\nto:$MAILTO\n(`more $LOGERR`)" | $CMD
 fi
 
 
 if [ "$MTA" == 'mail' ]
  then
+    CMD="$MAIL -v -s $S $MAILTO"
+    # header
+    source header.sh
+
     echo "  Mail success!"
     S="$MAILSUBJ - Sucess"
-    $MAIL -v -s "$S" $MAILTO < $LOGSUC
+    eval "$CMD < $LOGSUC"
 
     echo "  Mail error!"
     S="$MAILSUBJ - Error"
-    $MAIL -v -s "$S" $MAILTO < $LOGERR
+    eval "$CMD < $LOGERR"
 fi
+
+# success
+echo
+echo "  = Send report..."
+echo "  MTA        : $MTA"
+echo "  Success    : $LOGSUC"
+echo "  Error      : $LOGERR"
 
 # resume
 source resume.sh
